@@ -2079,34 +2079,6 @@ typedef enum {
 #define STACKCHECKB  (SAFETY >= 1) # in the bindings
 # When changed: do nothing
 
-# Whether we try to initialize subr_tab statically.
-# (g++ 3.3 doesn't accept compound expressions as initializers: PR#12615.
-# g++ 3.4 similarly: PR#15180.)
-#if !(defined(WIDE_SOFT) && !defined(WIDE_STRUCT)) && !(defined(__GNUG__) && (__GNUC__ == 3) && (__GNUC_MINOR__ == 3 || __GNUC_MINOR__ == 4) && defined(DEBUG_GCSAFETY))
-  #define INIT_SUBR_TAB
-#endif
-# NB: This has to be defined so external modules can work.
-# When changed: do nothing
-
-# Whether we try to initialize symbol_tab statically.
-# (Make initialization easier, but there is not enough space for the
-# compilation of SPVWTABS on some systems.
-# EMX 0.9c (gcc-2.7.2.1) says "Virtual memory exhausted".
-# g++ 3.3 doesn't accept compound expressions as initializers: PR#12615.
-# g++ 3.4 similarly: PR#15180.)
-#if !(defined(WIDE_SOFT) && !defined(WIDE_STRUCT)) && !(defined(__GNUG__) && (__GNUC__ == 3) && (__GNUC_MINOR__ == 3 || __GNUC_MINOR__ == 4) && defined(DEBUG_GCSAFETY))
-  #define INIT_SYMBOL_TAB
-#endif
-# When changed: nothing to do
-
-# Whether we try to initialize object_tab statically.
-# (g++ 3.3 doesn't accept compound expressions as initializers: PR#12615.
-# g++ 3.4 similarly: PR#15180.)
-#if !(defined(WIDE_SOFT) && !defined(WIDE_STRUCT)) && !(defined(__GNUG__) && (__GNUC__ == 3) && (__GNUC_MINOR__ == 3 || __GNUC_MINOR__ == 4) && defined(DEBUG_GCSAFETY))
-  #define INIT_OBJECT_TAB
-#endif
-# When changed: do nothing
-
 
 # Feature dependent include files.
 
@@ -3697,6 +3669,35 @@ typedef signed_int_with_n_bits(intVsize)  sintV;
 #ifdef NO_symbolflags
   #define oint_symbolflags_shift  -1 # invalid value
 #endif
+
+
+# Whether we try to initialize subr_tab statically.
+# (g++ 3.3 doesn't accept compound expressions as initializers: PR#12615.
+# g++ 3.4 similarly: PR#15180.)
+#if !(defined(WIDE_SOFT) && !defined(WIDE_STRUCT)) && !(defined(__GNUG__) && (__GNUC__ == 3) && (__GNUC_MINOR__ == 3 || __GNUC_MINOR__ == 4) && defined(OBJECT_STRUCT))
+  #define INIT_SUBR_TAB
+#endif
+# NB: This has to be defined so external modules can work.
+# When changed: do nothing
+
+# Whether we try to initialize symbol_tab statically.
+# (Make initialization easier, but there is not enough space for the
+# compilation of SPVWTABS on some systems.
+# EMX 0.9c (gcc-2.7.2.1) says "Virtual memory exhausted".
+# g++ 3.3 doesn't accept compound expressions as initializers: PR#12615.
+# g++ 3.4 similarly: PR#15180.)
+#if !(defined(WIDE_SOFT) && !defined(WIDE_STRUCT)) && !(defined(__GNUG__) && (__GNUC__ == 3) && (__GNUC_MINOR__ == 3 || __GNUC_MINOR__ == 4) && defined(OBJECT_STRUCT))
+  #define INIT_SYMBOL_TAB
+#endif
+# When changed: nothing to do
+
+# Whether we try to initialize object_tab statically.
+# (g++ 3.3 doesn't accept compound expressions as initializers: PR#12615.
+# g++ 3.4 similarly: PR#15180.)
+#if !(defined(WIDE_SOFT) && !defined(WIDE_STRUCT)) && !(defined(__GNUG__) && (__GNUC__ == 3) && (__GNUC_MINOR__ == 3 || __GNUC_MINOR__ == 4) && defined(OBJECT_STRUCT))
+  #define INIT_OBJECT_TAB
+#endif
+# When changed: do nothing
 
 
 # Set during the core of GC.
